--- a/src/WinForms.MVVM/WinForms.MVVM.csproj
+++ b/src/WinForms.MVVM/WinForms.MVVM.csproj
@@ -86,18 +86,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\WinForms.Classic\DataAccess\ConnectionHelper.cs">
-      <Link>DataAccess\ConnectionHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\WinForms.Classic\DataAccess\Customer.cs">
-      <Link>DataAccess\Customer.cs</Link>
-    </Compile>
-    <Compile Include="..\WinForms.Classic\DataAccess\DemoDataHelper.cs">
-      <Link>DataAccess\DemoDataHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\WinForms.Classic\DataAccess\Order.cs">
-      <Link>DataAccess\Order.cs</Link>
-    </Compile>
     <Compile Include="Services\InstantFeedbackService.cs" />
     <Compile Include="ViewModels\CustomerListViewModel.cs" />
     <Compile Include="ViewModels\EditCustomerViewModel.cs" />
@@ -175,6 +163,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DatabaseObjects\DatabaseObjects.csproj">
+      <Project>{76329c4f-8675-4dc7-9a83-5d02d3f45abd}</Project>
+      <Name>DatabaseObjects</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
