--- a/src/WinForms.MVVM/WinForms.MVVM.csproj
+++ b/src/WinForms.MVVM/WinForms.MVVM.csproj
@@ -128,6 +128,7 @@
     <EmbeddedResource Include="MainView.resx">
       <DependentUpon>MainView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
