bind two grid controls master - details

--- a/src/DatabaseObjects/app.config
+++ b/src/DatabaseObjects/app.config
@@ -2,6 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="InventoryXPO" connectionString="XpoProvider=InMemoryDataStore" />
-    <add name="InventoryXPO" connectionString="XpoProvider=MSSqlServer;data source=localhost;integrated security=SSPI;initial catalog=ForTest" />
+    <!--<add name="InventoryXPO" connectionString="XpoProvider=MSSqlServer;data source=localhost;integrated security=SSPI;initial catalog=ForTest" />-->
   </connectionStrings>
 </configuration>
