--- a/src/DatabaseObjects/DatabaseObjects.csproj
+++ b/src/DatabaseObjects/DatabaseObjects.csproj
@@ -66,11 +66,13 @@
     <Compile Include="ORMDataModelCode\OrderDetail.Designer.cs">
       <DependentUpon>OrderDetail.cs</DependentUpon>
     </Compile>
-    <Compile Include="ORMDataModelCode\OrderStatusType.cs" />
-    <Compile Include="ORMDataModelCode\OrderStatusType.Designer.cs">
-      <DependentUpon>OrderStatusType.cs</DependentUpon>
+    <Compile Include="ORMDataModelCode\OrderStatusEnumTable.cs" />
+    <Compile Include="ORMDataModelCode\OrderStatusEnumTable.Designer.cs">
+      <DependentUpon>OrderStatusEnumTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="ORMDataModelCode\OrderStatusType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\OrderStatusTypeValueConverter .cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
